[package]
name = "rebootinto-cli"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
description = "The command line tool for rebooting into other OS."
license = "MIT"
repository = "https://github.com/MOZGIII/rebootinto"

[dependencies]
failure = "0.1"
clap = "2.33"

[dependencies.rebootinto-core]
path = "../core"

[build-dependencies]
embed-resource = "*"
