[package]
name = "rebootinto-cli"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
description = "The command line tool for rebooting into other OS."
license = "MIT"
repository = "https://github.com/MOZGIII/rebootinto"
keywords = ["rebootinto", "reboot", "efi", "uefi", "cli"]
categories = ["command-line-utilities"]

[badges]
travis-ci = { repository = "MOZGIII/rebootinto" }
appveyor = { repository = "MOZGIII/rebootinto" }

[dependencies]
failure = "0.1"
clap = "2.33"

[dependencies.rebootinto-core]
version = "0.1"
path = "../core"

[build-dependencies]
embed-resource = "*"
