[package]
name = "rebootinto-cli"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2021"
description = "The command line tool for rebooting into other OS."
license = "MIT"
repository = "https://github.com/MOZGIII/rebootinto"
keywords = ["rebootinto", "reboot", "efi", "uefi", "cli"]
categories = ["command-line-utilities"]

[badges]
travis-ci = { repository = "MOZGIII/rebootinto" }
appveyor = { repository = "MOZGIII/rebootinto" }

[dependencies]
rebootinto-core = { path = "../core" }

anyhow = "1"
clap = { version ="4.0", features = ["derive", "env"] }

[build-dependencies]
embed-resource = "1"
