[package]
name = "rebootinto-core"
version = "0.1.2"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2021"
description = "The core API for rebooting into other OS."
license = "MIT"
repository = "https://github.com/MOZGIII/rebootinto"
keywords = ["rebootinto", "reboot", "efi", "uefi"]

[badges]
travis-ci = { repository = "MOZGIII/rebootinto" }
appveyor = { repository = "MOZGIII/rebootinto" }

[dependencies]
simplereboot = "0.1"
thiserror = "1"

[target.'cfg(not(target_os = "macos"))'.dependencies]
efibootnext = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
rebootinto-efibootnext-mock = { path = "../efibootnext-mock" }
