[package]
name = "rebootinto-core"
version = "0.1.2"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2021"
description = "The core API for rebooting into other OS."
license = "MIT"
repository = "https://github.com/MOZGIII/rebootinto"
keywords = ["rebootinto", "reboot", "efi", "uefi"]

[dependencies]
simplereboot = "0.1"
thiserror = "2"

[target.'cfg(not(target_os = "macos"))'.dependencies]
efibootnext = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
rebootinto-efibootnext-mock = { path = "../efibootnext-mock" }
