[package]
name = "rebootinto-druid"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
description = "The druid-based GUI tool for rebooting into other OS."
license = "MIT"
repository = "https://github.com/MOZGIII/rebootinto"
keywords = ["rebootinto", "reboot", "efi", "uefi", "ui", "gui", "druid"]
categories = ["gui"]

[badges]
travis-ci = { repository = "MOZGIII/rebootinto" }
appveyor = { repository = "MOZGIII/rebootinto" }

[dependencies]
failure = "0.1"
druid = { version = "0.6", features = ["im"] }

[dependencies.rebootinto-core]
version = "0.1"
path = "../core"

[build-dependencies]
embed-resource = "1"
