[package]
name = "rebootinto-iced"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2021"
description = "The iced-based GUI tool for rebooting into other OS."
license = "MIT"
repository = "https://github.com/MOZGIII/rebootinto"
keywords = ["rebootinto", "reboot", "efi", "uefi", "ui", "gui", "iced"]
categories = ["gui"]

[dependencies]
rebootinto-core = { path = "../core" }

anyhow = "1"
iced = "0.10"

[build-dependencies]
embed-resource = "2.4"
