[package]
name = "rebootinto-iui"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2021"
description = "The IUI-based GUI tool for rebooting into other OS."
license = "MIT"
repository = "https://github.com/MOZGIII/rebootinto"
keywords = ["rebootinto", "reboot", "efi", "uefi", "ui", "gui", "iui"]
categories = ["gui"]

[dependencies]
rebootinto-core = { path = "../core" }

anyhow = "1"

[dependencies.iui]
git = "https://github.com/MOZGIII/libui-rs.git"
rev = "5d526e4d8d817a0736f60835259070ffa58b8b42"
features = ["static"]

[build-dependencies]
embed-resource = "1"
