[package]
name = "rebootinto-tui"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
description = "The Terminal UI tool for rebooting into other OS."
license = "MIT"
repository = "https://github.com/MOZGIII/rebootinto"
keywords = ["rebootinto", "reboot", "efi", "uefi", "tui"]

[badges]
travis-ci = { repository = "MOZGIII/rebootinto" }
appveyor = { repository = "MOZGIII/rebootinto" }

[dependencies]
failure = "0.1"
failure_derive = "0.1"

[dependencies.rebootinto-core]
version = "0.1"
path = "../core"

[dependencies.tui]
version = "0.12"
default-features = false
optional = true

[dependencies.termion]
version = "1.5"
optional = true

[dependencies.crossterm]
version = "0.17"
optional = true

[features]
crossterm_backend = ["crossterm", "tui", "tui/crossterm"]
crossterm_backend_sync_input = ["crossterm_backend"]
termion_backend = ["termion", "tui", "tui/termion"]
default = ["crossterm_backend"]

[build-dependencies]
embed-resource = "1"
