[package]
name = "rebootinto-tui"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2021"
description = "The Terminal UI tool for rebooting into other OS."
license = "MIT"
repository = "https://github.com/MOZGIII/rebootinto"
keywords = ["rebootinto", "reboot", "efi", "uefi", "tui"]

[badges]
travis-ci = { repository = "MOZGIII/rebootinto" }
appveyor = { repository = "MOZGIII/rebootinto" }

[dependencies]
rebootinto-core = { path = "../core" }

anyhow = "1"

[dependencies.tui]
version = "0.9"
default-features = false
optional = true

[dependencies.termion]
version = "2.0"
optional = true

[dependencies.crossterm]
version = "0.17"
optional = true

[features]
crossterm_backend = ["crossterm", "tui", "tui/crossterm"]
crossterm_backend_sync_input = ["crossterm_backend"]
termion_backend = ["termion", "tui", "tui/termion"]
default = ["crossterm_backend"]

[build-dependencies]
embed-resource = "1"
