[package]
name = "rebootinto-tui"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2021"
description = "The Terminal UI tool for rebooting into other OS."
license = "MIT"
repository = "https://github.com/MOZGIII/rebootinto"
keywords = ["rebootinto", "reboot", "efi", "uefi", "tui", "ratatui"]

[dependencies]
rebootinto-core = { path = "../core" }

anyhow = "1"

[dependencies.ratatui]
version = "0.24"
default-features = false
optional = true

[dependencies.termion]
version = "2.0"
optional = true

[dependencies.crossterm]
version = "0.27"
optional = true

[features]
crossterm_backend = ["crossterm", "ratatui", "ratatui/crossterm"]
crossterm_backend_sync_input = ["crossterm_backend"]
termion_backend = ["termion", "ratatui", "ratatui/termion"]
default = ["crossterm_backend"]

[build-dependencies]
embed-resource = "2.3"
